fixed z-index issue with CC

--- a/css/currency-converter.css
+++ b/css/currency-converter.css
@@ -11,7 +11,7 @@
   right: 0;
   transition: all 0.3s ease-in-out;
   width: 350px;
-  z-index: 2;
+  z-index: 20;
 }
 
 .currency-converter .ui-wrap {
@@ -88,7 +88,7 @@
   right: -1px;
   top: -28px;
   border-radius: 10px 0 0 0;
-  z-index: 3;
+  z-index: 21;
 }
 
 .show-converter {
